feat(compiler): 细节完善

--- a/src/pages/user/Login/index.less
+++ b/src/pages/user/Login/index.less
@@ -56,3 +56,17 @@
     }
   }
 }
+
+.tabdefaultColor {
+  :global {
+    .ant-tabs-tab div {
+      color: #0bc3c3 !important;
+    }
+    .ant-tabs-ink-bar {
+      background-color: #0bc3c3 !important;
+    }
+  }
+
+  //
+  // border-color: #0bc3c3 !important;
+}
