--- a/src/global.less
+++ b/src/global.less
@@ -6,6 +6,11 @@ body,
   height: 100%;
 }
 
+.ant-btn-lg {
+  background-color: #0bc3c3 !important;
+  border-color: #0bc3c3 !important;
+}
+
 .ant-descriptions-item-content {
   align-items: center !important;
 }
